docs: updated the code sections

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -25,16 +25,465 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "1. [x] **The file given at hand `twitter-archive-enhanced.csv`**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All data files have been moved to folder : dataset\n",
+      "Listing the contents of folder : dataset\n",
+      " ['image-predictions.tsv', 'twitter-archive-enhanced.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "# all the requried files for this project are in the list files_list\n",
     "files_list = ['twitter-archive-enhanced.csv', 'image-predictions.tsv', 'tweet_json.txt']\n",
     "\n",
     "# dataset folder\n",
-    "folder = 'dataset'"
+    "folder = 'dataset'\n",
+    "\n",
+    "# checking if the any of the files are in parent directory\n",
+    "# if it exists we are moving the file under the dataset's folder\n",
+    "for file in files_list:\n",
+    "    if os.path.exists(file):\n",
+    "        os.rename(file, folder+\"/\"+file)\n",
+    "\n",
+    "# printing the folder content\n",
+    "print(\"All data files have been moved to folder : \" + folder + \"\\nListing the contents of folder : \" + \n",
+    "      folder +\"\\n\", os.listdir(folder))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>in_reply_to_status_id</th>\n",
+       "      <th>in_reply_to_user_id</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>source</th>\n",
+       "      <th>text</th>\n",
+       "      <th>retweeted_status_id</th>\n",
+       "      <th>retweeted_status_user_id</th>\n",
+       "      <th>retweeted_status_timestamp</th>\n",
+       "      <th>expanded_urls</th>\n",
+       "      <th>rating_numerator</th>\n",
+       "      <th>rating_denominator</th>\n",
+       "      <th>name</th>\n",
+       "      <th>doggo</th>\n",
+       "      <th>floofer</th>\n",
+       "      <th>pupper</th>\n",
+       "      <th>puppo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1895</th>\n",
+       "      <td>674742531037511680</td>\n",
+       "      <td>6.747400e+17</td>\n",
+       "      <td>4.196984e+09</td>\n",
+       "      <td>2015-12-10 00:08:50 +0000</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
+       "      <td>Some clarification is required. The dog is sin...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1718</th>\n",
+       "      <td>680176173301628928</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015-12-25 00:00:11 +0000</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
+       "      <td>This pupper is patiently waiting to scare the ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/680176173...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>pupper</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2030</th>\n",
+       "      <td>671789708968640512</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015-12-01 20:35:22 +0000</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
+       "      <td>This is space pup. He's very confused. Tries t...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/671789708...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>space</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>994</th>\n",
+       "      <td>748568946752774144</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2016-06-30 17:28:39 +0000</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
+       "      <td>This is Cora. She rings a bell for treats. 12/...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/748568946...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Cora</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2234</th>\n",
+       "      <td>668190681446379520</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015-11-21 22:14:07 +0000</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
+       "      <td>This is Skittles. I would kidnap Skittles. Pin...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/668190681...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Skittles</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                tweet_id  in_reply_to_status_id  in_reply_to_user_id  \\\n",
+       "1895  674742531037511680           6.747400e+17         4.196984e+09   \n",
+       "1718  680176173301628928                    NaN                  NaN   \n",
+       "2030  671789708968640512                    NaN                  NaN   \n",
+       "994   748568946752774144                    NaN                  NaN   \n",
+       "2234  668190681446379520                    NaN                  NaN   \n",
+       "\n",
+       "                      timestamp  \\\n",
+       "1895  2015-12-10 00:08:50 +0000   \n",
+       "1718  2015-12-25 00:00:11 +0000   \n",
+       "2030  2015-12-01 20:35:22 +0000   \n",
+       "994   2016-06-30 17:28:39 +0000   \n",
+       "2234  2015-11-21 22:14:07 +0000   \n",
+       "\n",
+       "                                                 source  \\\n",
+       "1895  <a href=\"http://twitter.com/download/iphone\" r...   \n",
+       "1718  <a href=\"http://twitter.com/download/iphone\" r...   \n",
+       "2030  <a href=\"http://twitter.com/download/iphone\" r...   \n",
+       "994   <a href=\"http://twitter.com/download/iphone\" r...   \n",
+       "2234  <a href=\"http://twitter.com/download/iphone\" r...   \n",
+       "\n",
+       "                                                   text  retweeted_status_id  \\\n",
+       "1895  Some clarification is required. The dog is sin...                  NaN   \n",
+       "1718  This pupper is patiently waiting to scare the ...                  NaN   \n",
+       "2030  This is space pup. He's very confused. Tries t...                  NaN   \n",
+       "994   This is Cora. She rings a bell for treats. 12/...                  NaN   \n",
+       "2234  This is Skittles. I would kidnap Skittles. Pin...                  NaN   \n",
+       "\n",
+       "      retweeted_status_user_id retweeted_status_timestamp  \\\n",
+       "1895                       NaN                        NaN   \n",
+       "1718                       NaN                        NaN   \n",
+       "2030                       NaN                        NaN   \n",
+       "994                        NaN                        NaN   \n",
+       "2234                       NaN                        NaN   \n",
+       "\n",
+       "                                          expanded_urls  rating_numerator  \\\n",
+       "1895                                                NaN                11   \n",
+       "1718  https://twitter.com/dog_rates/status/680176173...                10   \n",
+       "2030  https://twitter.com/dog_rates/status/671789708...                13   \n",
+       "994   https://twitter.com/dog_rates/status/748568946...                12   \n",
+       "2234  https://twitter.com/dog_rates/status/668190681...                12   \n",
+       "\n",
+       "      rating_denominator      name doggo floofer  pupper puppo  \n",
+       "1895                  10      None  None    None    None  None  \n",
+       "1718                  10      None  None    None  pupper  None  \n",
+       "2030                  10     space  None    None    None  None  \n",
+       "994                   10      Cora  None    None    None  None  \n",
+       "2234                  10  Skittles  None    None    None  None  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reading the twitter archive file\n",
+    "archive = pd.read_csv(folder+\"/\"+files_list[0])\n",
+    "\n",
+    "# taking at random file entries for the archive file\n",
+    "archive.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. [x] **Fetching the data from url and saving it to local drive - `image-predictions.tsv`**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reading the file from internet using the requests library\n",
+    "url = \"https://d17h27t6h515a5.cloudfront.net/topher/2017/August/599fd2ad_image-predictions/image-predictions.tsv\"\n",
+    "res = req.get(url)\n",
+    "\n",
+    "# saving the contents of the response variable to local drive\n",
+    "with open(os.path.join(folder+\"/\", url.split('/')[-1]), mode = \"wb\") as op_file:\n",
+    "    op_file.write(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>jpg_url</th>\n",
+       "      <th>img_num</th>\n",
+       "      <th>p1</th>\n",
+       "      <th>p1_conf</th>\n",
+       "      <th>p1_dog</th>\n",
+       "      <th>p2</th>\n",
+       "      <th>p2_conf</th>\n",
+       "      <th>p2_dog</th>\n",
+       "      <th>p3</th>\n",
+       "      <th>p3_conf</th>\n",
+       "      <th>p3_dog</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1949</th>\n",
+       "      <td>863062471531167744</td>\n",
+       "      <td>https://pbs.twimg.com/media/C_o2vKCUwAAgtOp.jpg</td>\n",
+       "      <td>2</td>\n",
+       "      <td>French_bulldog</td>\n",
+       "      <td>0.935804</td>\n",
+       "      <td>True</td>\n",
+       "      <td>pug</td>\n",
+       "      <td>0.059576</td>\n",
+       "      <td>True</td>\n",
+       "      <td>boxer</td>\n",
+       "      <td>0.001412</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>667534815156183040</td>\n",
+       "      <td>https://pbs.twimg.com/media/CUOPYI5UcAAj_nO.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Pembroke</td>\n",
+       "      <td>0.435254</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Cardigan</td>\n",
+       "      <td>0.307407</td>\n",
+       "      <td>True</td>\n",
+       "      <td>cocker_spaniel</td>\n",
+       "      <td>0.033158</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>975</th>\n",
+       "      <td>707014260413456384</td>\n",
+       "      <td>https://pbs.twimg.com/media/Cc_RsVlXEAIzzlX.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chihuahua</td>\n",
+       "      <td>0.583780</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Italian_greyhound</td>\n",
+       "      <td>0.129683</td>\n",
+       "      <td>True</td>\n",
+       "      <td>toy_terrier</td>\n",
+       "      <td>0.089153</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>412</th>\n",
+       "      <td>673919437611909120</td>\n",
+       "      <td>https://pbs.twimg.com/media/CVo-JuMWwAAet6F.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>jack-o'-lantern</td>\n",
+       "      <td>0.172079</td>\n",
+       "      <td>False</td>\n",
+       "      <td>schipperke</td>\n",
+       "      <td>0.115984</td>\n",
+       "      <td>True</td>\n",
+       "      <td>miniature_pinscher</td>\n",
+       "      <td>0.052175</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1676</th>\n",
+       "      <td>813172488309972993</td>\n",
+       "      <td>https://pbs.twimg.com/media/C0j4EESUsAABtMq.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>doormat</td>\n",
+       "      <td>0.954844</td>\n",
+       "      <td>False</td>\n",
+       "      <td>golden_retriever</td>\n",
+       "      <td>0.026193</td>\n",
+       "      <td>True</td>\n",
+       "      <td>cocker_spaniel</td>\n",
+       "      <td>0.004386</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                tweet_id                                          jpg_url  \\\n",
+       "1949  863062471531167744  https://pbs.twimg.com/media/C_o2vKCUwAAgtOp.jpg   \n",
+       "89    667534815156183040  https://pbs.twimg.com/media/CUOPYI5UcAAj_nO.jpg   \n",
+       "975   707014260413456384  https://pbs.twimg.com/media/Cc_RsVlXEAIzzlX.jpg   \n",
+       "412   673919437611909120  https://pbs.twimg.com/media/CVo-JuMWwAAet6F.jpg   \n",
+       "1676  813172488309972993  https://pbs.twimg.com/media/C0j4EESUsAABtMq.jpg   \n",
+       "\n",
+       "      img_num               p1   p1_conf  p1_dog                 p2   p2_conf  \\\n",
+       "1949        2   French_bulldog  0.935804    True                pug  0.059576   \n",
+       "89          1         Pembroke  0.435254    True           Cardigan  0.307407   \n",
+       "975         1        Chihuahua  0.583780    True  Italian_greyhound  0.129683   \n",
+       "412         1  jack-o'-lantern  0.172079   False         schipperke  0.115984   \n",
+       "1676        1          doormat  0.954844   False   golden_retriever  0.026193   \n",
+       "\n",
+       "      p2_dog                  p3   p3_conf  p3_dog  \n",
+       "1949    True               boxer  0.001412    True  \n",
+       "89      True      cocker_spaniel  0.033158    True  \n",
+       "975     True         toy_terrier  0.089153    True  \n",
+       "412     True  miniature_pinscher  0.052175    True  \n",
+       "1676    True      cocker_spaniel  0.004386    True  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking if fetched the data right way\n",
+    "img_pre_test = pd.read_csv(folder+\"/\"+files_list[1], delimiter=\"\\t\")\n",
+    "img_pre_test.sample(5)\n",
+    "\n",
+    "# we did it the right way, Yay! it worked."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. [x] ***Final check if all our data files are in one place***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['image-predictions.tsv', 'twitter-archive-enhanced.csv']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list the directory for our dataset folder\n",
+    "os.listdir(folder)\n",
+    "\n",
+    "# As expected, we have all of our required files :)"
    ]
   }
  ],
