docs: updated code

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -572,7 +572,7 @@
     "# starting the timer\n",
     "start = timer()\n",
     "\n",
-    "with open(os.path.join(folder+\"/\", 'twitter_failed.txt'), mode = \"w\") as op_file:\n",
+    "with open(os.path.join(folder+\"/\", 'tweets_failed.txt'), mode = \"w\") as op_file:\n",
     "    for error in failed_ids:\n",
     "        try:\n",
     "            page = api.get_status(error, tweet_mode = 'extended')\n",
@@ -586,7 +586,7 @@
     "end = timer()\n",
     "\n",
     "# calculating the runtime for the fetch\n",
-    "print(\"It took about {} mins to fetch data from API\".format(round((end - start)/60, 0)))"
+    "print(\"It took about {} secs to fetch data from API\".format(round((end - start), 2)))"
    ]
   },
   {
@@ -611,12 +611,22 @@
    "outputs": [],
    "source": [
     "# appending twitter_failed.txt to tweet_json.txt\n",
-    "filenames = ['twitter_failed.txt', 'tweet_json_raw.txt']\n",
+    "filenames = ['tweets_failed.txt', 'tweet_json_raw.txt']\n",
+    "\n",
+    "# starting the timer\n",
+    "start = timer()\n",
+    "\n",
     "with open(folder+'/'+'tweet_json.txt', 'w') as outfile:\n",
     "    for fname in filenames:\n",
     "        with open(fname) as infile:\n",
     "            for line in infile:\n",
-    "                outfile.write(line)"
+    "                outfile.write(line)\n",
+    "                \n",
+    "# starting the timer\n",
+    "end = timer()\n",
+    "\n",
+    "# calculating the runtime for appending\n",
+    "print(\"It took about {} secs for appending\".format(round((end - start), 2)))"
    ]
   },
   {
