--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -884,12 +884,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "json_master = pd.concat([json_1, json_2], ignore_index = True, join = 'outer', sort = True)\n",
     "json_master.to_json('tweet_json_master.txt', orient = 'records', lines = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. [x] **Last thing to do is to tidy up our folder, let's get going.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'error.png',\n",
+       " 'image-predictions.tsv',\n",
+       " 'New Text Document.txt',\n",
+       " 'README.md',\n",
+       " 'tweet_json.txt',\n",
+       " 'tweet_json_1.txt',\n",
+       " 'tweet_json_master.txt',\n",
+       " 'twitter-archive-enhanced.csv',\n",
+       " 'wrangle_act.ipynb']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# moving all data files under one folder - dataset\n",
+    "# removing the temporary files, that acted as placeholders\n",
+    "\n",
+    "folder = 'dataset'\n",
+    "\n",
+    "# listing the current directory\n",
+    "# we know that our master datasets for this project are\n",
+    "# 1. twitter-archive-enhanced.csv\n",
+    "# 2. image-predictions.tsv\n",
+    "# 3. tweet_json_master.txt\n",
+    "\n"
    ]
   }
  ],
