--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -909,18 +909,14 @@
       "text/plain": [
        "['.git',\n",
        " '.ipynb_checkpoints',\n",
+       " 'dataset',\n",
        " 'error.png',\n",
-       " 'image-predictions.tsv',\n",
        " 'New Text Document.txt',\n",
        " 'README.md',\n",
-       " 'tweet_json.txt',\n",
-       " 'tweet_json_1.txt',\n",
-       " 'tweet_json_master.txt',\n",
-       " 'twitter-archive-enhanced.csv',\n",
        " 'wrangle_act.ipynb']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,14 +925,32 @@
     "# moving all data files under one folder - dataset\n",
     "# removing the temporary files, that acted as placeholders\n",
     "\n",
+    "# creating the folder\n",
     "folder = 'dataset'\n",
+    "if not os.path.exists(folder):\n",
+    "    os.mkdir(folder)\n",
     "\n",
-    "# listing the current directory\n",
     "# we know that our master datasets for this project are\n",
     "# 1. twitter-archive-enhanced.csv\n",
     "# 2. image-predictions.tsv\n",
     "# 3. tweet_json_master.txt\n",
-    "\n"
+    "# let us move these files\n",
+    "\n",
+    "# updating our files_list\n",
+    "files_list[-1] = 'tweet_json_master.txt'\n",
+    "\n",
+    "# moving only required files\n",
+    "for file in files_list:\n",
+    "    if os.path.exists(file):\n",
+    "        os.rename(file, folder+'/'+file)\n",
+    "\n",
+    "# removing the tweet_json and tweet_json_1 files as they are not required anymore\n",
+    "for file in ['tweet_json.txt',\n",
+    " 'tweet_json_1.txt']:\n",
+    "    os.remove(file)\n",
+    "    \n",
+    "# lisitng the current directory\n",
+    "os.listdir()"
    ]
   }
  ],
