--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -77,98 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweet_id</th>\n",
-       "      <th>in_reply_to_status_id</th>\n",
-       "      <th>in_reply_to_user_id</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>source</th>\n",
-       "      <th>text</th>\n",
-       "      <th>retweeted_status_id</th>\n",
-       "      <th>retweeted_status_user_id</th>\n",
-       "      <th>retweeted_status_timestamp</th>\n",
-       "      <th>expanded_urls</th>\n",
-       "      <th>rating_numerator</th>\n",
-       "      <th>rating_denominator</th>\n",
-       "      <th>name</th>\n",
-       "      <th>doggo</th>\n",
-       "      <th>floofer</th>\n",
-       "      <th>pupper</th>\n",
-       "      <th>puppo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>622</th>\n",
-       "      <td>796080075804475393</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2016-11-08 20:00:55 +0000</td>\n",
-       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
-       "      <td>This is Yogi. He's 98% floof. Snuggable af. 12...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://twitter.com/dog_rates/status/796080075...</td>\n",
-       "      <td>12</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Yogi</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "               tweet_id  in_reply_to_status_id  in_reply_to_user_id  \\\n",
-       "622  796080075804475393                    NaN                  NaN   \n",
-       "\n",
-       "                     timestamp  \\\n",
-       "622  2016-11-08 20:00:55 +0000   \n",
-       "\n",
-       "                                                source  \\\n",
-       "622  <a href=\"http://twitter.com/download/iphone\" r...   \n",
-       "\n",
-       "                                                  text  retweeted_status_id  \\\n",
-       "622  This is Yogi. He's 98% floof. Snuggable af. 12...                  NaN   \n",
-       "\n",
-       "     retweeted_status_user_id retweeted_status_timestamp  \\\n",
-       "622                       NaN                        NaN   \n",
-       "\n",
-       "                                         expanded_urls  rating_numerator  \\\n",
-       "622  https://twitter.com/dog_rates/status/796080075...                12   \n",
-       "\n",
-       "     rating_denominator  name doggo floofer pupper puppo  \n",
-       "622                  10  Yogi  None    None   None  None  "
+       "(2356, 17)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,8 +95,8 @@
     "# reading the twitter archive file\n",
     "archive = pd.read_csv(files_list[0])\n",
     "\n",
-    "# taking at random file entries for the archive file\n",
-    "archive.sample(1)"
+    "# taking at random entries for the archive file\n",
+    "archive.shape"
    ]
   },
   {
@@ -244,33 +162,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>667550904950915073</td>\n",
-       "      <td>https://pbs.twimg.com/media/CUOb_gUUkAACXdS.jpg</td>\n",
+       "      <th>14</th>\n",
+       "      <td>666094000022159362</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT5w9gUW4AAsBNN.jpg</td>\n",
        "      <td>1</td>\n",
-       "      <td>web_site</td>\n",
-       "      <td>0.999335</td>\n",
-       "      <td>False</td>\n",
-       "      <td>vizsla</td>\n",
-       "      <td>0.000081</td>\n",
+       "      <td>bloodhound</td>\n",
+       "      <td>0.195217</td>\n",
        "      <td>True</td>\n",
-       "      <td>collie</td>\n",
-       "      <td>0.000069</td>\n",
+       "      <td>German_shepherd</td>\n",
+       "      <td>0.078260</td>\n",
+       "      <td>True</td>\n",
+       "      <td>malinois</td>\n",
+       "      <td>0.075628</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1337</th>\n",
-       "      <td>758405701903519748</td>\n",
-       "      <td>https://pbs.twimg.com/media/CoZl9fXWgAMox0n.jpg</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Chesapeake_Bay_retriever</td>\n",
-       "      <td>0.702954</td>\n",
-       "      <td>True</td>\n",
-       "      <td>laptop</td>\n",
-       "      <td>0.092277</td>\n",
+       "      <th>1141</th>\n",
+       "      <td>729838605770891264</td>\n",
+       "      <td>https://pbs.twimg.com/ext_tw_video_thumb/72983...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>stone_wall</td>\n",
+       "      <td>0.758218</td>\n",
        "      <td>False</td>\n",
-       "      <td>notebook</td>\n",
-       "      <td>0.032727</td>\n",
+       "      <td>patio</td>\n",
+       "      <td>0.074205</td>\n",
+       "      <td>False</td>\n",
+       "      <td>prison</td>\n",
+       "      <td>0.013826</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -278,17 +196,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                tweet_id                                          jpg_url  \\\n",
-       "95    667550904950915073  https://pbs.twimg.com/media/CUOb_gUUkAACXdS.jpg   \n",
-       "1337  758405701903519748  https://pbs.twimg.com/media/CoZl9fXWgAMox0n.jpg   \n",
+       "                tweet_id                                            jpg_url  \\\n",
+       "14    666094000022159362    https://pbs.twimg.com/media/CT5w9gUW4AAsBNN.jpg   \n",
+       "1141  729838605770891264  https://pbs.twimg.com/ext_tw_video_thumb/72983...   \n",
        "\n",
-       "      img_num                        p1   p1_conf  p1_dog      p2   p2_conf  \\\n",
-       "95          1                  web_site  0.999335   False  vizsla  0.000081   \n",
-       "1337        4  Chesapeake_Bay_retriever  0.702954    True  laptop  0.092277   \n",
+       "      img_num          p1   p1_conf  p1_dog               p2   p2_conf  \\\n",
+       "14          1  bloodhound  0.195217    True  German_shepherd  0.078260   \n",
+       "1141        1  stone_wall  0.758218   False            patio  0.074205   \n",
        "\n",
        "      p2_dog        p3   p3_conf  p3_dog  \n",
-       "95      True    collie  0.000069    True  \n",
-       "1337   False  notebook  0.032727   False  "
+       "14      True  malinois  0.075628    True  \n",
+       "1141   False    prison  0.013826   False  "
       ]
      },
      "execution_count": 6,
@@ -326,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,18 +316,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-29-f789db9bbabf>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-29-f789db9bbabf>\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    print(assert len(set_one)+len(set_two)+len(set_three) == len(tweet_ids))\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# passing the list of ids to the fuction fetch_and_save(), but in batches\n",
+    "# given that we can request 900 request/15min - window, let's break our ids into\n",
+    "tweet_ids = archive['tweet_id'].tolist()\n",
+    "\n",
+    "# set_one, two and three\n",
+    "set_one = tweet_ids[0:900]; set_two = tweet_ids[900:1800]; set_three = tweet_ids[1800:]\n",
+    "\n",
+    "# checking the lengths so that we send 900 ids/requests.\n",
+    "len(set_one), len(set_two), len(set_three), len(set_one)+len(set_two)+len(set_three),\n",
+    "print(assert len(set_one)+len(set_two)+len(set_three) == len(tweet_ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fetching data 1st iteration\n",
     "# starting the timer\n",
     "start = timer()\n",
     "\n",
-    "# passing the list of ids to the fuction fetch_and_save()\n",
-    "tweet_ids = archive['tweet_id'].tolist()\n",
-    "\n",
-    "# fetching data 1st iteration\n",
-    "test_one = fetch_and_save(tweet_ids, api)\n",
+    "# querying\n",
+    "test_one = fetch_and_save(set_one, api)\n",
     "\n",
     "# ending the timer\n",
     "end = timer()\n",
@@ -434,31 +377,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# checking if test_one has duplicate ids\n",
-    "assert len(test_one) == len(set(test_one))\n",
-    "\n",
-    "# we can see that there are no duplicates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# passing this failed list to the fetch_and_save function\n",
-    "\n",
+    "# fetching data 2nd iteration\n",
     "# starting the timer\n",
     "start = timer()\n",
     "\n",
-    "# fetching data 2nd iteration\n",
-    "test_two = fetch_and_save(test_one, api)\n",
+    "# querying\n",
+    "test_two = fetch_and_save(set_two, api)\n",
     "\n",
     "# ending the timer\n",
     "end = timer()\n",
     "\n",
     "# calculating the runtime for fetch_and_save\n",
-    "print(\"That took about {} secs.\".format(round(end - start, 1)))"
+    "print(\"That took about {} mins.\".format(round((end - start)/60, 1)))"
    ]
   },
   {
@@ -477,10 +407,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# checking if test_one has duplicate ids\n",
-    "assert len(test_one) == len(set(test_one))\n",
+    "# fetching data 3rd iteration\n",
+    "# starting the timer\n",
+    "start = timer()\n",
     "\n",
-    "# we can see that there are no duplicates"
+    "# querying\n",
+    "test_three = fetch_and_save(set_three, api)\n",
+    "\n",
+    "# ending the timer\n",
+    "end = timer()\n",
+    "\n",
+    "# calculating the runtime for fetch_and_save\n",
+    "print(\"That took about {} mins.\".format(round((end - start)/60, 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# no of erroneous ids\n",
+    "print(\"we have about {} failed requests.\".format(len(test_three)))"
    ]
   },
   {
